--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
+  <div id="current"></div>
+<script src="/assets/current.js"></script>
   <h1>Weekly Builds 2026</h1>
 
   <p>This site tracks one weekly project per week for the rest of the year.</p>
