Remove leading slashes from asset paths in HTML

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Weekly Builds 2026</title>
-  <link rel="stylesheet" href="/assets/style.css">
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
   <div id="current"></div>
-<script src="/assets/current.js"></script>
+<script src="assets/current.js"></script>
   <h1>Weekly Builds 2026</h1>
 
   <p>This site tracks one weekly project per week for the rest of the year.</p>
