--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
   <div id="current"></div>
-<script src="assets/current.js"></script>
+  <script src="data/weeks.js"></script>
+  <script src="assets/current.js"></script>
   <h1>Weekly Builds 2026</h1>
 
   <p>This site tracks one weekly project per week for the rest of the year.</p>
