--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
   <p>This site tracks one weekly project per week for the rest of the year.</p>
 
-  <p><a href="./weeks.md">View the weeks</a></p>
+  <p><a href="./weeks.html">View the weeks</a></p>
 </body>
 </html>
