Update title and structure in weeks.html

--- a/weeks.html
+++ b/weeks.html
@@ -2,16 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Weeks – Weekly Builds 2026</title>
+  <title>Week</title>
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-  <h1>Weekly Builds – 2026</h1>
-  <p>One project per week. Shipping or abandoning both count.</p>
 
-  <div id="weeks" class="week-grid"></div>
+<div id="week-nav"></div>
+<div id="week-header"></div>
+<div id="day-cards" class="day-row"></div>
 
-  <script src="data/weeks.js"></script>
-  <script defer src="assets/weeks.js"></script>
+<script src="data/weeks.js"></script>
+<script defer src="assets/week.js"></script>
 </body>
 </html>
