Update script reference from week.js to weeks.js

--- a/weeks.html
+++ b/weeks.html
@@ -12,6 +12,6 @@
 <div id="day-cards" class="day-row"></div>
 
 <script src="data/weeks.js"></script>
-<script defer src="assets/week.js"></script>
+<script defer src="assets/weeks.js"></script>
 </body>
 </html>
