Update index.html structure and styles

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Weekly Builds 2026</title>
-  <link rel="stylesheet" href="assets/style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Weekly Builds</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="current"></div>
-  <script src="data/weeks.js"></script>
-  <script src="assets/current.js"></script>
-  <h1>Weekly Builds 2026</h1>
+  <header>
+    <h1>Weekly Builds</h1>
+    <button id="themeToggle">Toggle Theme</button>
+  </header>
 
-  <p>This site tracks one weekly project per week for the rest of the year.</p>
+  <main id="app"></main>
 
-  <p><a href="./weeks.html">View the weeks</a></p>
+  <script src="script.js"></script>
 </body>
 </html>
