Update index.html for project journal structure

--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Weekly Builds</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF‑8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Weekly Project Journal</title>
+  <link rel="stylesheet" href="assets/style.css" />
+  <script defer src="assets/current.js"></script>
 </head>
 <body>
-  <header>
-    <h1>Weekly Builds</h1>
-    <button id="themeToggle">Toggle Theme</button>
+  <header class="app-header">
+    <h1>Weekly Project Journal</h1>
+    <nav class="nav-bar">
+      <a href="index.html">Home</a>
+      <a href="weeks.html">Archive</a>
+    </nav>
   </header>
-
-  <main id="app"></main>
-
-  <script src="script.js"></script>
+  <main id="main-content" class="container">
+    <!-- Dynamic content inserted by current.js -->
+  </main>
+  <footer class="app-footer">
+    <small>&copy; 2026. Crafted with care.</small>
+  </footer>
 </body>
 </html>
