--- a/admin.html
+++ b/admin.html
@@ -1,91 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF‑8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin · Weekly Builds</title>
-  <link rel="stylesheet" href="./assets/style.css" />
+  <title>Admin – Weekly Project Journal</title>
+  <link rel="stylesheet" href="assets/style.css" />
+  <script defer src="admin.js"></script>
 </head>
-<body class="admin">
+<body>
+  <header class="app-header">
+    <h1>Admin Console</h1>
+    <button id="logout-btn" class="button" style="display:none;">Log out</button>
+  </header>
+  <main class="container">
+    <!-- Login section -->
+    <section id="login-section">
+      <h2>Please log in</h2>
+      <form id="login-form">
+        <label for="password-input">Password:</label>
+        <input type="password" id="password-input" required />
+        <button type="submit" class="button">Login</button>
+      </form>
+      <p id="login-error" class="error"></p>
+    </section>
 
-<header class="admin-header">
-  <h1>Admin Console</h1>
-  <button id="logout" class="ghost" style="display:none">Log out</button>
-</header>
-
-<main class="admin-main">
-
-  <!-- LOGIN -->
-  <section id="login-section" class="card admin-card">
-    <h2>Log in</h2>
-    <form id="login-form">
-      <input type="password" id="password" placeholder="Password" required />
-      <button type="submit">Enter</button>
-    </form>
-    <p id="login-error" class="error"></p>
-  </section>
-
-  <!-- WEEKS -->
-  <section id="manage-section" class="card admin-card" style="display:none">
-    <h2>Weeks</h2>
-
-    <form id="week-form" class="stack">
-      <input type="hidden" id="week-id" />
-
-      <label>
-        Title
-        <input id="week-title-input" placeholder="Project title" required />
-      </label>
-
-      <label>
-        Start date (Sunday)
-        <input type="date" id="week-start-input" required />
-      </label>
-
-      <label>
-        Status
-        <select id="week-status-input">
-          <option value="planned">planned</option>
-          <option value="in_progress">in progress</option>
-          <option value="completed">completed</option>
-          <option value="abandoned">abandoned</option>
-        </select>
-      </label>
-
-      <div class="row">
-        <button type="submit">Save week</button>
-        <button type="button" id="reset-week-form" class="ghost">Reset</button>
-      </div>
-    </form>
-
-    <table id="weeks-table">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Title</th>
-          <th>Start</th>
-          <th>Status</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </section>
-
-  <!-- IDEAS -->
-  <section id="ideas-section" class="card admin-card" style="display:none">
-    <h2>Ideas</h2>
-
-    <form id="idea-form" class="row">
-      <input id="idea-title-input" placeholder="New idea…" required />
-      <button type="submit">Add</button>
-    </form>
-
-    <ul id="ideas-list" class="ideas"></ul>
-  </section>
-
-</main>
-
-<script src="admin.js"></script>
+    <!-- Week management -->
+    <section id="week-manage" style="display:none;">
+      <h2>Manage Weeks</h2>
+      <form id="week-form">
+        <input type="hidden" id="week-id-input" />
+        <div class="field-group">
+          <label for="week-title-input">Title:</label>
+          <input type="text" id="week-title-input" placeholder="Project title" required />
+        </div>
+        <div class="field-group">
+          <label for="week-start-input">Start date (YYYY‑MM‑DD):</label>
+          <input type="date" id="week-start-input" required />
+        </div>
+        <div class="field-group">
+          <label for="week-status-input">Status:</label>
+          <select id="week-status-input">
+            <option value="planned">Planned</option>
+            <option value="in_progress">In Progress</option>
+            <option value="completed">Completed</option>
+            <option value="abandoned">Abandoned</option>
+          </select>
+        </div>
+        <button type="submit" class="button">Save Week</button>
+        <button type="button" id="reset-week-form" class="button secondary">Reset</button>
+      </form>
+      <h3>Existing Weeks</h3>
+      <table id="weeks-table">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Date Range</th>
+            <th>Status</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Week rows inserted by admin.js -->
+        </tbody>
+      </table>
+    </section>
+  </main>
+  <footer class="app-footer">
+    <small>&copy; 2026.</small>
+  </footer>
 </body>
 </html>
