--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin – Weekly Project Journal</title>
   <link rel="stylesheet" href="assets/style.css" />
+  <script src="data/weeks.js"></script>
   <script defer src="admin.js"></script>
 </head>
 <body>
