--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF‑8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Weekly Project Journal</title>
   <link rel="stylesheet" href="assets/style.css" />
-  <script src="data/weeks.js"></script>
-  <script defer src="assets/current.js"></script>
 </head>
 <body>
-  <header class="app-header">
+  <header>
     <h1>Weekly Project Journal</h1>
-    <nav class="nav-bar">
-      <a href="index.html">Home</a>
+    <nav>
+      <a href="index.html">This Week</a>
       <a href="weeks.html">Archive</a>
+      <a href="admin.html">Admin</a>
     </nav>
   </header>
-  <main id="main-content" class="container">
-    <!-- Dynamic content inserted by current.js -->
+  <main id="main-content">
+    <section id="current-week"></section>
   </main>
-  <footer class="app-footer">
-    <small>&copy; 2026. Crafted with care.</small>
-  </footer>
+  <script type="module">
+    import { weeks } from './data/weeks.js';
+    import { renderHome } from './assets/current.js';
+    renderHome(weeks);
+  </script>
 </body>
 </html>
