--- a/admin.html
+++ b/admin.html
@@ -1,73 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF‑8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin – Weekly Project Journal</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Admin Console</title>
   <link rel="stylesheet" href="assets/style.css" />
-  <script src="data/weeks.js"></script>
-  <script defer src="admin.js"></script>
 </head>
 <body>
-  <header class="app-header">
+  <header>
     <h1>Admin Console</h1>
-    <button id="logout-btn" class="button" style="display:none;">Log out</button>
+    <nav>
+      <a href="index.html">This Week</a>
+      <a href="weeks.html">Archive</a>
+    </nav>
   </header>
-  <main class="container">
-    <!-- Login section -->
+  <main id="admin-main">
     <section id="login-section">
-      <h2>Please log in</h2>
-      <form id="login-form">
-        <label for="password-input">Password:</label>
-        <input type="password" id="password-input" required />
-        <button type="submit" class="button">Login</button>
-      </form>
+      <h2>Login</h2>
+      <input type="password" id="password" placeholder="Enter password" />
+      <button id="login-btn">Login</button>
       <p id="login-error" class="error"></p>
     </section>
-
-    <!-- Week management -->
-    <section id="week-manage" style="display:none;">
-      <h2>Manage Weeks</h2>
+    <section id="editor" style="display:none;">
+      <h2>Edit Weeks</h2>
       <form id="week-form">
-        <input type="hidden" id="week-id-input" />
-        <div class="field-group">
-          <label for="week-title-input">Title:</label>
-          <input type="text" id="week-title-input" placeholder="Project title" required />
-        </div>
-        <div class="field-group">
-          <label for="week-start-input">Start date (YYYY‑MM‑DD):</label>
-          <input type="date" id="week-start-input" required />
-        </div>
-        <div class="field-group">
-          <label for="week-status-input">Status:</label>
-          <select id="week-status-input">
-            <option value="planned">Planned</option>
-            <option value="in_progress">In Progress</option>
-            <option value="completed">Completed</option>
-            <option value="abandoned">Abandoned</option>
-          </select>
-        </div>
-        <button type="submit" class="button">Save Week</button>
-        <button type="button" id="reset-week-form" class="button secondary">Reset</button>
+        <input type="hidden" id="week-id" />
+        <input type="text" id="title" placeholder="Title" required />
+        <input type="date" id="start" required />
+        <select id="status">
+          <option value="planned">Planned</option>
+          <option value="in_progress">In Progress</option>
+          <option value="completed">Completed</option>
+          <option value="abandoned">Abandoned</option>
+        </select>
+        <button type="submit">Save</button>
       </form>
-      <h3>Existing Weeks</h3>
-      <table id="weeks-table">
-        <thead>
-          <tr>
-            <th>Title</th>
-            <th>Date Range</th>
-            <th>Status</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          <!-- Week rows inserted by admin.js -->
-        </tbody>
-      </table>
+      <ul id="week-list"></ul>
     </section>
   </main>
-  <footer class="app-footer">
-    <small>&copy; 2026.</small>
-  </footer>
+  <script type="module" src="admin.js"></script>
 </body>
 </html>
