--- a/weeks.html
+++ b/weeks.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF‑8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Week Archive – Weekly Project Journal</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Week Archive</title>
   <link rel="stylesheet" href="assets/style.css" />
-  <script src="data/weeks.js"></script>
-  <script defer src="assets/week.js"></script>
 </head>
 <body>
-  <header class="app-header">
+  <header>
     <h1>Week Archive</h1>
-    <nav class="nav-bar">
-      <a href="index.html">Home</a>
+    <nav>
+      <a href="index.html">This Week</a>
       <a href="weeks.html">Archive</a>
+      <a href="admin.html">Admin</a>
     </nav>
   </header>
-  <main id="week-main" class="container">
-    <!-- Dynamic content inserted by week.js -->
-  </main>
-  <footer class="app-footer">
-    <small>&copy; 2026. Crafted with care.</small>
-  </footer>
+  <main id="archive-main"></main>
+  <script type="module">
+    import { weeks } from './data/weeks.js';
+    import { renderArchive } from './assets/week.js';
+    renderArchive(weeks);
+  </script>
 </body>
 </html>
